[package]
name = "kmer-minhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["benchmark"]

[dev-dependencies]
rayon = "1.5.1"
tokio = { version = "1.13", features = ["full"] }
bio = "0.39.0"